--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div id="world"></div>
 
-  <script src="http://threejs.org/build/three.min.js"></script>
+  <script src="//threejs.org/build/three.min.js"></script>
   <script src="bundle.js"></script>
 </body>
 
