--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <div id="world"></div>
 
   <script src="//threejs.org/build/three.min.js"></script>
+  <script src="//threejs.org/examples/js/loaders/ColladaLoader.js"></script>
   <script src="bundle.js"></script>
 </body>
 
