--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Avijator</title>
+  <title>1942: Death Over Balkans</title>
   <style>
     body {
       margin: 0;
@@ -16,8 +16,9 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
-      background: linear-gradient(#e4e0ba, #f7d9aa);
+      background: linear-gradient(#D7D2D2, #E5C5AB);
     }
+    /*  https://color.adobe.com/S%C3%B3bria-3-color-theme-9503950/edit/?copy=true&base=2&rule=Custom&selected=1&name=Copy%20of%20S%C3%B3bria%203&mode=rgb&rgbvalues=0.8705882352941177,0.8941176470588236,0.6313725490196078,0.5686274509803921,0.6470588235294118,0.4,0.18823529411764706,0.16862745098039217,0.1843137254901961,0.8431372549019608,0.8235294117647058,0.8235294117647058,0.8980392156862745,0.7725490196078432,0.6705882352941176&swatchOrder=0,1,2,3,4 */
   </style>
 </head>
 
@@ -27,6 +28,7 @@
 
   <script src="//threejs.org/build/three.min.js"></script>
   <script src="//threejs.org/examples/js/loaders/ColladaLoader.js"></script>
+  <script src="//threejs.org/examples/js/controls/OrbitControls.js"></script>
   <script src="bundle.js"></script>
 </body>
 
