--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta property="og:image" content="screen.png" />
+  <meta property="og:type" content="game" /> 
   <title>1943: Death Over Balkans</title>
   <style>
     body {
