--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 
   <div id="world"></div>
 
-  <script src="//threejs.org/build/three.min.js"></script>
-  <script src="//threejs.org/examples/js/loaders/ColladaLoader.js"></script>
-  <script src="//threejs.org/examples/js/controls/OrbitControls.js"></script>
+  <!-- <script src="https://threejs.org/build/three.min.js"></script>
+  <script src="https://threejs.org/examples/js/loaders/ColladaLoader.js"></script>
+  <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script> -->
+  <script src="libs/three.min.js"></script>
+  <script src="libs/ColladaLoader.js"></script>
+  <script src="libs/OrbitControls.js"></script>
   <script src="bundle.js"></script>
 </body>
 
